--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 /* === PAGE BACKGROUND AND GENERICS === */
 .ui-page, .ui-mobile-viewport {
-	background: url(images/tiling_stripes.gif);
+	background: url(../images/tiling_stripes.gif);
 }
 
 .ui-content {
@@ -87,7 +87,7 @@
 }
 
 .ui-listview .ui-icon-arrow-r {
-	background: transparent url(images/arrow_right.png) center center no-repeat !important;
+	background: transparent url(../images/arrow_right.png) center center no-repeat !important;
 		-webkit-border-radius: 0;
 		-moz-border-radius: 0;
 		border-radius: 0;
@@ -342,7 +342,7 @@ div.ui-btn .ui-btn-inner {
 
 /* === BACK BUTTON === */
 a[data-rel='back'], .ui-header a[data-rel='back'] {
-	background: transparent url(images/backButtonSprite.png) 0 0 no-repeat !important;
+	background: transparent url(../images/backButtonSprite.png) 0 0 no-repeat !important;
 		-webkit-box-shadow: none !important; 
 		-moz-box-shadow: none !important; 
 		box-shadow: none !important;
@@ -354,7 +354,7 @@ a[data-rel='back'], .ui-header a[data-rel='back'] {
 }
 
 a[data-rel='back'] .ui-btn-inner {
-	background: transparent url(images/backButtonSprite.png) right 0 no-repeat !important;
+	background: transparent url(../images/backButtonSprite.png) right 0 no-repeat !important;
 	margin: 0 0 0 15px;
 	padding: 0 8px 0 0 !important;
 	height: 30px;
@@ -479,7 +479,7 @@ input.ui-input-text, .ui-input-search {
 }
 
 .ui-input-clear {
-	background: transparent url(images/iconSprite.png) 0 0 no-repeat;
+	background: transparent url(../images/iconSprite.png) 0 0 no-repeat;
 	width: 19px;
 	height: 19px;
 	border: none;
@@ -612,34 +612,40 @@ input.ui-input-text, .ui-input-search {
 	-o-box-shadow: none;
 	box-shadow: none;
 }
+
+/* gradient on footer tabs - removed from inline in html.tpl.php */
+#footerTabs {
+  background: #FFF -webkit-radial-gradient(circle, #FFF, #dee2e4);
+}
+        
 	#tabA .ui-icon {
-		background: url(images/tabSprite.png) 0 0 no-repeat;
+		background: url(../images/tabSprite.png) 0 0 no-repeat;
 	}
 		#tabA.ui-btn-active .ui-icon {
-			background: url(images/tabSprite.png) -32px 0 no-repeat;
+			background: url(../images/tabSprite.png) -32px 0 no-repeat;
 		}
 	#tabB .ui-icon {
-		background: url(images/tabSprite.png) 0 -32px no-repeat;
+		background: url(../images/tabSprite.png) 0 -32px no-repeat;
 	}
 		#tabB.ui-btn-active .ui-icon {
-			background: url(images/tabSprite.png) -32px -32px no-repeat;
+			background: url(../images/tabSprite.png) -32px -32px no-repeat;
 		}
 	#tabC .ui-icon {
-		background: url(images/tabSprite.png) 0 -64px no-repeat;
+		background: url(../images/tabSprite.png) 0 -64px no-repeat;
 	}
 		#tabC.ui-btn-active .ui-icon {
-			background: url(images/tabSprite.png) -32px -64px no-repeat;
+			background: url(../images/tabSprite.png) -32px -64px no-repeat;
 		}
 		
 		
 /* === RETINA DEVICE FIXES === */
 @media (-webkit-min-device-pixel-ratio : 1.5), (min-device-pixel-ratio : 1.5) {
 	.ui-listview .ui-icon-arrow-r {
-		background-image: url(images/arrow_right@2x.png) !important;
+		background-image: url(../images/arrow_right@2x.png) !important;
 		background-size: 9.5px 14px;
 	}
 	a[data-rel='back'], .ui-header a[data-rel='back'], a[data-rel="back"] .ui-btn-inner {
-		background-image: url(images/backButtonSprite@2x.png) !important;
+		background-image: url(../images/backButtonSprite@2x.png) !important;
 		background-size: 500px 60px;
 	}
 	.ui-input-clear {
